added chunk_list fun

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "410a4665",
+   "id": "2e0a22e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ad2d5644",
+   "id": "db9b9795",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1d86a38c",
+   "id": "a65377b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "487f3b49",
+   "id": "ff0abffe",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "353a3e6e",
+   "id": "48dbf6d7",
    "metadata": {},
    "outputs": [
     {
@@ -81,8 +81,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "a07a625f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chunk_list(list,chunk_size,default_first_val=None):\n",
+    "    chunked_list=[]\n",
+    "    for i in range(0, len(list), chunk_size):\n",
+    "        if default_first_val:\n",
+    "            values=[default_first_val]\n",
+    "            values.extend(list[i:i+chunk_size])\n",
+    "            chunked_list.append(values)\n",
+    "        else:\n",
+    "            chunked_list.append(list[i:i+chunk_size])\n",
+    "\n",
+    "    return chunked_list"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4793f2fa",
+   "id": "82cdac99",
    "metadata": {},
    "outputs": [],
    "source": []
