--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2e0a22e9",
+   "id": "d9c63304",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "db9b9795",
+   "id": "2cd10d33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a65377b0",
+   "id": "4f6aab71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ff0abffe",
+   "id": "73ed969c",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "48dbf6d7",
+   "id": "464df21c",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a07a625f",
+   "id": "171af1ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,8 +101,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "4aa1261c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trajectory_cols=columns[:4]\n",
+    "trajectory_rows=[]\n",
+    "\n",
+    "timed_vehicle_cols=['track_id']+columns[4:]\n",
+    "timed_vehicle_rows=[]\n",
+    "\n",
+    "for row in data:\n",
+    "    items=row.replace('\\n','').split(';')\n",
+    "    trajectory_rows.append(items[:4])\n",
+    "    timed_vehicle_rows.extend(chunk_list(items[4:],6,items[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "82cdac99",
+   "id": "0785caed",
    "metadata": {},
    "outputs": [],
    "source": []
