--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d9c63304",
+   "id": "825feaf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2cd10d33",
+   "id": "e28818c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4f6aab71",
+   "id": "541da6be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "73ed969c",
+   "id": "f2baabdb",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "464df21c",
+   "id": "d47b1e4f",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "171af1ca",
+   "id": "7328d396",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4aa1261c",
+   "id": "31321e62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,8 +120,242 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "ce67a08a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trajectory_data=pd.DataFrame(columns=trajectory_cols,data=trajectory_rows)\n",
+    "timed_vehicle_data=pd.DataFrame(columns=timed_vehicle_cols,data=timed_vehicle_rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3404028e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>type</th>\n",
+       "      <th>traveled_d</th>\n",
+       "      <th>avg_speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Car</td>\n",
+       "      <td>48.85</td>\n",
+       "      <td>9.770344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Motorcycle</td>\n",
+       "      <td>98.09</td>\n",
+       "      <td>19.839417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Motorcycle</td>\n",
+       "      <td>63.80</td>\n",
+       "      <td>18.228752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Motorcycle</td>\n",
+       "      <td>145.72</td>\n",
+       "      <td>26.229014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Motorcycle</td>\n",
+       "      <td>138.01</td>\n",
+       "      <td>24.841425</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  track_id         type  traveled_d   avg_speed\n",
+       "0        1          Car       48.85    9.770344\n",
+       "1        2   Motorcycle       98.09   19.839417\n",
+       "2        3   Motorcycle       63.80   18.228752\n",
+       "3        4   Motorcycle      145.72   26.229014\n",
+       "4        5   Motorcycle      138.01   24.841425"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trajectory_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "71dcb0a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>lon_acc</th>\n",
+       "      <th>lat_acc</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>37.977391</td>\n",
+       "      <td>23.737688</td>\n",
+       "      <td>4.9178</td>\n",
+       "      <td>0.0518</td>\n",
+       "      <td>-0.0299</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>37.977391</td>\n",
+       "      <td>23.737688</td>\n",
+       "      <td>4.9207</td>\n",
+       "      <td>-0.0124</td>\n",
+       "      <td>-0.0354</td>\n",
+       "      <td>0.040000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>37.977391</td>\n",
+       "      <td>23.737688</td>\n",
+       "      <td>4.9160</td>\n",
+       "      <td>-0.0519</td>\n",
+       "      <td>-0.0413</td>\n",
+       "      <td>0.080000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>37.977390</td>\n",
+       "      <td>23.737688</td>\n",
+       "      <td>4.9057</td>\n",
+       "      <td>-0.0914</td>\n",
+       "      <td>-0.0478</td>\n",
+       "      <td>0.120000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>37.977390</td>\n",
+       "      <td>23.737689</td>\n",
+       "      <td>4.8871</td>\n",
+       "      <td>-0.1679</td>\n",
+       "      <td>-0.0550</td>\n",
+       "      <td>0.160000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  track_id         lat         lon    speed   lon_acc   lat_acc       time\n",
+       "0        1   37.977391   23.737688   4.9178    0.0518   -0.0299   0.000000\n",
+       "1        1   37.977391   23.737688   4.9207   -0.0124   -0.0354   0.040000\n",
+       "2        1   37.977391   23.737688   4.9160   -0.0519   -0.0413   0.080000\n",
+       "3        1   37.977390   23.737688   4.9057   -0.0914   -0.0478   0.120000\n",
+       "4        1   37.977390   23.737689   4.8871   -0.1679   -0.0550   0.160000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timed_vehicle_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7f154ffb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check if every id (evry timed data) is included in the former dataframe\n",
+    "\n",
+    "trajectory_data.shape[0]==len(timed_vehicle_data.track_id.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0785caed",
+   "id": "ab7da283",
    "metadata": {},
    "outputs": [],
    "source": []
